[gd_scene load_steps=11 format=4 uid="uid://df8mb7drt734h"]

[ext_resource type="Script" uid="uid://uglc3nua2oet" path="res://src/testscene_zaid.gd" id="1_kvoes"]
[ext_resource type="Texture2D" uid="uid://ban0lwcifpecn" path="res://assets/chess_board.png" id="1_slif8"]
[ext_resource type="PackedScene" uid="uid://dw57axs3ewcec" path="res://scenes/rook.tscn" id="3_agx8n"]
[ext_resource type="PackedScene" uid="uid://dlafkxu8sx7i1" path="res://scenes/king_owen.tscn" id="4_7ko7u"]
[ext_resource type="Script" uid="uid://b326kidl5usfr" path="res://src/input_manager.gd" id="5_kvoes"]
[ext_resource type="Script" uid="uid://6swhlbtsoplr" path="res://src/enemy_spawn_path.gd" id="6_7ko7u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aw7hs"]
texture = ExtResource("1_slif8")
texture_region_size = Vector2i(150, 150)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_xjy55"]
tile_size = Vector2i(150, 150)
sources/0 = SubResource("TileSetAtlasSource_aw7hs")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufy8l"]
size = Vector2(685, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mekxf"]
size = Vector2(21, 399.875)

[node name="TestsceneZaid" type="Node2D"]
script = ExtResource("1_kvoes")

[node name="PawnSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Board" type="TileMapLayer" parent="."]
position = Vector2(53, 0)
scale = Vector2(0.178, 0.178)
tile_map_data = PackedByteArray("AAD+/wAAAAAAAAMAAAD+/wEAAAAAAAQAAAD+/wIAAAAAAAUAAAD+/wMAAAAAAAYAAAD+/wQAAAAAAAcAAAD//wAAAAABAAMAAAD//wEAAAABAAQAAAD//wIAAAABAAUAAAD//wMAAAABAAYAAAD//wQAAAABAAcAAAAAAAAAAAACAAMAAAAAAAEAAAACAAQAAAAAAAIAAAACAAUAAAAAAAMAAAACAAYAAAAAAAQAAAACAAcAAAABAAAAAAADAAMAAAABAAEAAAADAAQAAAABAAIAAAADAAUAAAABAAMAAAADAAYAAAABAAQAAAADAAcAAAACAAAAAAAEAAMAAAACAAEAAAAEAAQAAAACAAIAAAAEAAUAAAACAAMAAAAEAAYAAAACAAQAAAAEAAcAAAADAAAAAAAFAAMAAAADAAEAAAAFAAQAAAADAAIAAAAFAAUAAAADAAMAAAAFAAYAAAADAAQAAAAFAAcAAAAEAAAAAAAGAAMAAAAEAAEAAAAGAAQAAAAEAAIAAAAGAAUAAAAEAAMAAAAGAAYAAAAEAAQAAAAGAAcAAAAFAAAAAAAHAAMAAAAFAAEAAAAHAAQAAAAFAAIAAAAHAAUAAAAFAAMAAAAHAAYAAAAFAAQAAAAHAAcAAAAGAAAAAAAAAAMAAAAGAAEAAAAAAAQAAAAGAAIAAAAAAAUAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAcAAAAHAAAAAAABAAMAAAAHAAEAAAABAAQAAAAHAAIAAAABAAUAAAAHAAMAAAABAAYAAAAHAAQAAAABAAcAAAAIAAAAAAACAAMAAAAIAAEAAAACAAQAAAAIAAIAAAACAAUAAAAIAAMAAAACAAYAAAAIAAQAAAACAAcAAAAJAAAAAAADAAMAAAAJAAEAAAADAAQAAAAJAAIAAAADAAUAAAAJAAMAAAADAAYAAAAJAAQAAAADAAcAAAAKAAAAAAAEAAMAAAAKAAEAAAAEAAQAAAAKAAIAAAAEAAUAAAAKAAMAAAAEAAYAAAAKAAQAAAAEAAcAAAALAAAAAAAFAAMAAAALAAEAAAAFAAQAAAALAAIAAAAFAAUAAAALAAMAAAAFAAYAAAALAAQAAAAFAAcAAAAMAAAAAAAGAAMAAAAMAAEAAAAGAAQAAAAMAAIAAAAGAAUAAAAMAAMAAAAGAAYAAAAMAAQAAAAGAAcAAAANAAAAAAAHAAMAAAANAAEAAAAHAAQAAAANAAIAAAAHAAUAAAANAAMAAAAHAAYAAAANAAQAAAAHAAcAAAAOAAAAAAAAAAMAAAAOAAEAAAAAAAQAAAAOAAIAAAAAAAUAAAAOAAMAAAAAAAYAAAAOAAQAAAAAAAcAAAAPAAAAAAABAAMAAAAPAAEAAAABAAQAAAAPAAIAAAABAAUAAAAPAAMAAAABAAYAAAAPAAQAAAABAAcAAAAQAAAAAAACAAMAAAAQAAEAAAACAAQAAAAQAAIAAAACAAUAAAAQAAMAAAACAAYAAAAQAAQAAAACAAcAAAARAAAAAAADAAMAAAARAAEAAAADAAQAAAARAAIAAAADAAUAAAARAAMAAAADAAYAAAARAAQAAAADAAcAAAASAAAAAAAEAAMAAAASAAEAAAAEAAQAAAASAAIAAAAEAAUAAAASAAMAAAAEAAYAAAASAAQAAAAEAAcAAAATAAAAAAAFAAMAAAATAAEAAAAFAAQAAAATAAIAAAAFAAUAAAATAAMAAAAFAAYAAAATAAQAAAAFAAcAAAAUAAAAAAAGAAMAAAAUAAEAAAAGAAQAAAAUAAIAAAAGAAUAAAAUAAMAAAAGAAYAAAAUAAQAAAAGAAcAAAAVAAAAAAAHAAMAAAAVAAEAAAAHAAQAAAAVAAIAAAAHAAUAAAAVAAMAAAAHAAYAAAAVAAQAAAAHAAcAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAEAAAAOAAcAAAAAAAIAAAAOAAgAAAAAAAMAAAAOAAkAAAAAAAQAAAAOAAoAAAAAAAUAAAAOAAsAAAAAAAYAAAAOAAwAAAAAAAcAAAAPAAUAAAABAAAAAAAPAAYAAAABAAEAAAAPAAcAAAABAAIAAAAPAAgAAAABAAMAAAAPAAkAAAABAAQAAAAPAAoAAAABAAUAAAAPAAsAAAABAAYAAAAPAAwAAAABAAcAAAAQAAUAAAACAAAAAAAQAAYAAAACAAEAAAAQAAcAAAACAAIAAAAQAAgAAAACAAMAAAAQAAkAAAACAAQAAAAQAAoAAAACAAUAAAAQAAsAAAACAAYAAAAQAAwAAAACAAcAAAARAAUAAAADAAAAAAARAAYAAAADAAEAAAARAAcAAAADAAIAAAARAAgAAAADAAMAAAARAAkAAAADAAQAAAARAAoAAAADAAUAAAARAAsAAAADAAYAAAARAAwAAAADAAcAAAASAAUAAAAEAAAAAAASAAYAAAAEAAEAAAASAAcAAAAEAAIAAAASAAgAAAAEAAMAAAASAAkAAAAEAAQAAAASAAoAAAAEAAUAAAASAAsAAAAEAAYAAAASAAwAAAAEAAcAAAATAAUAAAAFAAAAAAATAAYAAAAFAAEAAAATAAcAAAAFAAIAAAATAAgAAAAFAAMAAAATAAkAAAAFAAQAAAATAAoAAAAFAAUAAAATAAsAAAAFAAYAAAATAAwAAAAFAAcAAAAUAAUAAAAGAAAAAAAUAAYAAAAGAAEAAAAUAAcAAAAGAAIAAAAUAAgAAAAGAAMAAAAUAAkAAAAGAAQAAAAUAAoAAAAGAAUAAAAUAAsAAAAGAAYAAAAUAAwAAAAGAAcAAAAVAAUAAAAHAAAAAAAVAAYAAAAHAAEAAAAVAAcAAAAHAAIAAAAVAAgAAAAHAAMAAAAVAAkAAAAHAAQAAAAVAAoAAAAHAAUAAAAVAAsAAAAHAAYAAAAVAAwAAAAHAAcAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAEAAAAGAAcAAAAAAAIAAAAGAAgAAAAAAAMAAAAGAAkAAAAAAAQAAAAGAAoAAAAAAAUAAAAGAAsAAAAAAAYAAAAGAAwAAAAAAAcAAAAHAAUAAAABAAAAAAAHAAYAAAABAAEAAAAHAAcAAAABAAIAAAAHAAgAAAABAAMAAAAHAAkAAAABAAQAAAAHAAoAAAABAAUAAAAHAAsAAAABAAYAAAAHAAwAAAABAAcAAAAIAAUAAAACAAAAAAAIAAYAAAACAAEAAAAIAAcAAAACAAIAAAAIAAgAAAACAAMAAAAIAAkAAAACAAQAAAAIAAoAAAACAAUAAAAIAAsAAAACAAYAAAAIAAwAAAACAAcAAAAJAAUAAAADAAAAAAAJAAYAAAADAAEAAAAJAAcAAAADAAIAAAAJAAgAAAADAAMAAAAJAAkAAAADAAQAAAAJAAoAAAADAAUAAAAJAAsAAAADAAYAAAAJAAwAAAADAAcAAAAKAAUAAAAEAAAAAAAKAAYAAAAEAAEAAAAKAAcAAAAEAAIAAAAKAAgAAAAEAAMAAAAKAAkAAAAEAAQAAAAKAAoAAAAEAAUAAAAKAAsAAAAEAAYAAAAKAAwAAAAEAAcAAAALAAUAAAAFAAAAAAALAAYAAAAFAAEAAAALAAcAAAAFAAIAAAALAAgAAAAFAAMAAAALAAkAAAAFAAQAAAALAAoAAAAFAAUAAAALAAsAAAAFAAYAAAALAAwAAAAFAAcAAAAMAAUAAAAGAAAAAAAMAAYAAAAGAAEAAAAMAAcAAAAGAAIAAAAMAAgAAAAGAAMAAAAMAAkAAAAGAAQAAAAMAAoAAAAGAAUAAAAMAAsAAAAGAAYAAAAMAAwAAAAGAAcAAAANAAUAAAAHAAAAAAANAAYAAAAHAAEAAAANAAcAAAAHAAIAAAANAAgAAAAHAAMAAAANAAkAAAAHAAQAAAANAAoAAAAHAAUAAAANAAsAAAAHAAYAAAANAAwAAAAHAAcAAAD+/wUAAAAAAAAAAAD+/wYAAAAAAAEAAAD+/wcAAAAAAAIAAAD+/wgAAAAAAAMAAAD+/wkAAAAAAAQAAAD+/woAAAAAAAUAAAD+/wsAAAAAAAYAAAD+/wwAAAAAAAcAAAD//wUAAAABAAAAAAD//wYAAAABAAEAAAD//wcAAAABAAIAAAD//wgAAAABAAMAAAD//wkAAAABAAQAAAD//woAAAABAAUAAAD//wsAAAABAAYAAAD//wwAAAABAAcAAAAAAAUAAAACAAAAAAAAAAYAAAACAAEAAAAAAAcAAAACAAIAAAAAAAgAAAACAAMAAAAAAAkAAAACAAQAAAAAAAoAAAACAAUAAAAAAAsAAAACAAYAAAAAAAwAAAACAAcAAAABAAUAAAADAAAAAAABAAYAAAADAAEAAAABAAcAAAADAAIAAAABAAgAAAADAAMAAAABAAkAAAADAAQAAAABAAoAAAADAAUAAAABAAsAAAADAAYAAAABAAwAAAADAAcAAAACAAUAAAAEAAAAAAACAAYAAAAEAAEAAAACAAcAAAAEAAIAAAACAAgAAAAEAAMAAAACAAkAAAAEAAQAAAACAAoAAAAEAAUAAAACAAsAAAAEAAYAAAACAAwAAAAEAAcAAAADAAUAAAAFAAAAAAADAAYAAAAFAAEAAAADAAcAAAAFAAIAAAADAAgAAAAFAAMAAAADAAkAAAAFAAQAAAADAAoAAAAFAAUAAAADAAsAAAAFAAYAAAADAAwAAAAFAAcAAAAEAAUAAAAGAAAAAAAEAAYAAAAGAAEAAAAEAAcAAAAGAAIAAAAEAAgAAAAGAAMAAAAEAAkAAAAGAAQAAAAEAAoAAAAGAAUAAAAEAAsAAAAGAAYAAAAEAAwAAAAGAAcAAAAFAAUAAAAHAAAAAAAFAAYAAAAHAAEAAAAFAAcAAAAHAAIAAAAFAAgAAAAHAAMAAAAFAAkAAAAHAAQAAAAFAAoAAAAHAAUAAAAFAAsAAAAHAAYAAAAFAAwAAAAHAAcAAAD+/w0AAAAAAAAAAAD//w0AAAABAAAAAAAAAA0AAAACAAAAAAABAA0AAAADAAAAAAACAA0AAAAEAAAAAAADAA0AAAAFAAAAAAAEAA0AAAAGAAAAAAAFAA0AAAAHAAAAAAAGAA0AAAAAAAAAAAAHAA0AAAABAAAAAAAIAA0AAAACAAAAAAAJAA0AAAADAAAAAAAKAA0AAAAEAAAAAAALAA0AAAAFAAAAAAAMAA0AAAAGAAAAAAANAA0AAAAHAAAAAAAOAA0AAAAAAAAAAAAPAA0AAAABAAAAAAAQAA0AAAACAAAAAAARAA0AAAADAAAAAAASAA0AAAAEAAAAAAATAA0AAAAFAAAAAAAUAA0AAAAGAAAAAAAVAA0AAAAHAAAAAAA=")
tile_set = SubResource("TileSet_xjy55")

[node name="Rook" parent="." instance=ExtResource("3_agx8n")]
position = Vector2(253, 201)
motion_mode = 0

[node name="King" parent="." instance=ExtResource("4_7ko7u")]
position = Vector2(307, 200)

[node name="InputManager" type="Node" parent="."]
script = ExtResource("5_kvoes")

[node name="Bounds" type="Node2D" parent="."]
position = Vector2(199, 219)

[node name="Upper" type="StaticBody2D" parent="Bounds"]
position = Vector2(0, -410)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Upper"]
position = Vector2(121, 181)
shape = SubResource("RectangleShape2D_ufy8l")

[node name="Lower" type="StaticBody2D" parent="Bounds"]
position = Vector2(0, 410)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Lower"]
position = Vector2(121, -261)
shape = SubResource("RectangleShape2D_ufy8l")

[node name="Right" type="StaticBody2D" parent="Bounds"]
position = Vector2(412, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Right"]
position = Vector2(39, -31)
shape = SubResource("RectangleShape2D_mekxf")

[node name="Left" type="StaticBody2D" parent="Bounds"]
position = Vector2(-412, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bounds/Left"]
position = Vector2(202, -39)
shape = SubResource("RectangleShape2D_mekxf")

[node name="PawnSpawnPath" type="Path2D" parent="."]
script = ExtResource("6_7ko7u")
camera_path = NodePath("../Camera2D")

[node name="PawnSpawnLocation" type="PathFollow2D" parent="PawnSpawnPath"]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 180)

[connection signal="timeout" from="PawnSpawnTimer" to="." method="_on_pawn_spawn_timer_timeout"]
